force-app/main/default/objects/ID_Number__c/ID_Number__c.object-meta.xml
<CustomObject>
    <label>ID Number</label>
    <nameField>
        <label>ID Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ID Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>