force-app/main/default/objects/ID_Number__c/fields/Checksum_Digit__c.field-meta.xml
<CustomField>
    <fullName>Checksum_Digit__c</fullName>
    <label>Checksum Digit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>