force-app/main/default/objects/ID_Number__c/fields/Search_Counter__c.field-meta.xml
<CustomField>
    <fullName>Search_Counter__c</fullName>
    <label>Search Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>